--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "main": "server.js",
   "scripts": {
     "server": "nodemon server.js",
-    "client":"npm start --prefix client",
+    "client": "npm start --prefix client",
     "client install": "npm install -prefix client",
-    "dev":"concurrently \"npm run server\" \"npm run client"
+    "dev": "concurrently \"npm run server\" \"npm run client"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.10.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-validator": "^6.4.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.11"
+    "mongoose": "^5.9.11",
+    "react-social-login-buttons": "^3.1.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
